fix missing padding for videos

--- a/static/css/media.css
+++ b/static/css/media.css
@@ -215,7 +215,7 @@
     }
 
     ..spray-books-helper, .image-lead {
-        padding: 100px 0px;
+        padding: 100px 15px;
     }
 }
 
@@ -239,7 +239,7 @@
     }
 
     .spray-books-helper, .image-lead {
-        padding: 100px 0px;
+        padding: 100px 15px;
     }
 
 }
@@ -281,7 +281,7 @@
     }
 
     .spray-books-helper, .image-lead {
-        padding: 100px 0px 200px;
+        padding: 100px 15px 200px;
     }
 
     .spray-books-helper #video {
